// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ballot redirects if ballot does not exist 1`] = `<div />`;

exports[`Ballot renders correctly with an audited ballot 1`] = `
<div>
  <div
    class="sc-ckVGcZ hkbcRl"
  >
    <div
      class="sc-eNQAEJ gXOgPQ"
    >
      <div
        class="sc-hMqMXs eXQboI"
      >
        <div
          class="sc-kEYyzF ftIbIl"
        >
          <div
            class="sc-jWBwVP hYQrug"
          >
            <button
              class="bp3-button bp3-minimal sc-cvbbAY hfuCAB"
              href="/election/1/audit-board/1"
              type="button"
            >
              <span
                class="bp3-icon bp3-icon-caret-left"
                icon="caret-left"
              >
                <svg
                  data-icon="caret-left"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    caret-left
                  </desc>
                  <path
                    d="M9.5 4c-.13 0-.24.05-.33.13l-4 3.5c-.1.09-.17.22-.17.37s.07.28.17.37l4 3.5a.495.495 0 00.83-.37v-7c0-.28-.22-.5-.5-.5z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="bp3-button-text"
              >
                All Ballots
              </span>
            </button>
            <h3
              class="bp3-heading sc-jKJlTe jiOjCA"
            >
              Audit Board Selections
            </h3>
          </div>
          <div
            class="bp3-divider sc-bdVaJa gqVLlZ"
          />
          <div
            class="sc-iAyFgw dGwwDw"
          >
            <div>
              <h5
                class="bp3-heading sc-hSdWYo javYLu"
              >
                batch
              </h5>
              <h4
                class="bp3-heading sc-eHgmQL dWBpUZ"
              >
                0003-04-Precinct 13 (Jonesboro Fire Department)
              </h4>
            </div>
            <div>
              <h5
                class="bp3-heading sc-hSdWYo javYLu"
              >
                position
              </h5>
              <h4
                class="bp3-heading sc-eHgmQL dWBpUZ"
              >
                313
              </h4>
            </div>
            <div>
              <h5
                class="bp3-heading sc-hSdWYo javYLu"
              >
                tabulator
              </h5>
              <h4
                class="bp3-heading sc-eHgmQL dWBpUZ"
              >
                11
              </h4>
            </div>
            <div>
              <button
                class="bp3-button bp3-intent-danger"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  Ballot Not Found
                </span>
              </button>
            </div>
          </div>
          <div
            class="bp3-divider sc-bdVaJa gqVLlZ"
          />
          <div>
            <div
              class="sc-bwzfXH kvMlvD"
            >
              <div
                class="ballot-main"
              >
                <h4
                  class="bp3-heading"
                >
                  Ballot Contests
                </h4>
                <form>
                  <div
                    class="sc-htpNat jWiLEy"
                  >
                    <div
                      class="sc-gzVnrw eUAHzK"
                    >
                      <div
                        class="sc-htoDjs ClGoI"
                      >
                        <h3
                          class="bp3-heading sc-kgoBCf bwYjCS"
                        >
                          Contest Name
                        </h3>
                        <label
                          class="bp3-control bp3-checkbox sc-kAzzGY fnwZpE"
                        >
                          <input
                            type="checkbox"
                          />
                          <span
                            class="undefined bp3-control-indicator"
                          >
                            <span
                              class="checkbox-text"
                            >
                              Choice One
                            </span>
                          </span>
                        </label>
                        <label
                          class="bp3-control bp3-checkbox sc-kAzzGY fnwZpE"
                        >
                          <input
                            type="checkbox"
                          />
                          <span
                            class="undefined bp3-control-indicator"
                          >
                            <span
                              class="checkbox-text"
                            >
                              Choice Two
                            </span>
                          </span>
                        </label>
                      </div>
                      <div
                        class="sc-dnqmqq eyBucE"
                      >
                        <label
                          class="bp3-control bp3-checkbox sc-kAzzGY fnwZpE"
                        >
                          <input
                            type="checkbox"
                          />
                          <span
                            class="small bp3-control-indicator"
                          >
                            <span
                              class="checkbox-text"
                            >
                              Blank vote
                            </span>
                          </span>
                        </label>
                        <label
                          class="bp3-control bp3-checkbox sc-kAzzGY fnwZpE"
                        >
                          <input
                            type="checkbox"
                          />
                          <span
                            class="small bp3-control-indicator"
                          >
                            <span
                              class="checkbox-text"
                            >
                              Not on Ballot
                            </span>
                          </span>
                        </label>
                        <div
                          class="sc-chPdSV hVjAOW sc-jTzLTM hDLiwJ"
                        >
                          <textarea
                            class="bp3-input sc-jzJRlG lpfNbV"
                            name="comment-Contest Name"
                            placeholder="Add Note"
                          >
                            Good ballot
                          </textarea>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="sc-ifAKCX jzSIMx"
                  >
                    <button
                      class="bp3-button bp3-large bp3-intent-success sc-gZMcBi eZVGYn"
                      type="submit"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        Submit Selections
                      </span>
                    </button>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
        <div
          class="sc-kkGfuU pZHjH"
        >
          <h4
            class="bp3-heading"
          >
            Instructions
          </h4>
          <ol
            class="bp3-list"
          >
            <li>
              Confirm that you are looking at the correct ballot for the batch and position. If the ballot was not located, select
               
              <strong>
                Ballot Not Found at the top of the screen.
              </strong>
            </li>
            <li>
              For each contest, select all the candidate/choices which you see marked on the paper ballot. Select 
              <strong>
                Blank Vote
              </strong>
               
              if the voter did not make any selections. Select
               
              <strong>
                Not on Ballot
              </strong>
               if the contest does not appear on the ballot.
            </li>
            <li>
              Once all votes are recorded, 
              <strong>
                Submit Selections
              </strong>
               
              and proceed to the next ballot until all ballots have been audited.
            </li>
          </ol>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Ballot renders correctly with an unaudited ballot 1`] = `
<div>
  <div
    class="sc-ckVGcZ hkbcRl"
  >
    <div
      class="sc-eNQAEJ gXOgPQ"
    >
      <div
        class="sc-hMqMXs eXQboI"
      >
        <div
          class="sc-kEYyzF ftIbIl"
        >
          <div
            class="sc-jWBwVP hYQrug"
          >
            <button
              class="bp3-button bp3-minimal sc-cvbbAY hfuCAB"
              href="/election/1/audit-board/1"
              type="button"
            >
              <span
                class="bp3-icon bp3-icon-caret-left"
                icon="caret-left"
              >
                <svg
                  data-icon="caret-left"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    caret-left
                  </desc>
                  <path
                    d="M9.5 4c-.13 0-.24.05-.33.13l-4 3.5c-.1.09-.17.22-.17.37s.07.28.17.37l4 3.5a.495.495 0 00.83-.37v-7c0-.28-.22-.5-.5-.5z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="bp3-button-text"
              >
                All Ballots
              </span>
            </button>
            <h3
              class="bp3-heading sc-jKJlTe jiOjCA"
            >
              Audit Board Selections
            </h3>
          </div>
          <div
            class="bp3-divider sc-bdVaJa gqVLlZ"
          />
          <div
            class="sc-iAyFgw dGwwDw"
          >
            <div>
              <h5
                class="bp3-heading sc-hSdWYo javYLu"
              >
                batch
              </h5>
              <h4
                class="bp3-heading sc-eHgmQL dWBpUZ"
              >
                0003-04-Precinct 19 (Jonesboro Fire Department)
              </h4>
            </div>
            <div>
              <h5
                class="bp3-heading sc-hSdWYo javYLu"
              >
                position
              </h5>
              <h4
                class="bp3-heading sc-eHgmQL dWBpUZ"
              >
                2112
              </h4>
            </div>
            <div>
              <h5
                class="bp3-heading sc-hSdWYo javYLu"
              >
                tabulator
              </h5>
              <h4
                class="bp3-heading sc-eHgmQL dWBpUZ"
              >
                11
              </h4>
            </div>
            <div>
              <button
                class="bp3-button bp3-intent-danger"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  Ballot Not Found
                </span>
              </button>
            </div>
          </div>
          <div
            class="bp3-divider sc-bdVaJa gqVLlZ"
          />
          <div>
            <div
              class="sc-bwzfXH kvMlvD"
            >
              <div
                class="ballot-main"
              >
                <h4
                  class="bp3-heading"
                >
                  Ballot Contests
                </h4>
                <form>
                  <div
                    class="sc-htpNat jWiLEy"
                  >
                    <div
                      class="sc-gzVnrw eUAHzK"
                    >
                      <div
                        class="sc-htoDjs ClGoI"
                      >
                        <h3
                          class="bp3-heading sc-kgoBCf bwYjCS"
                        >
                          Contest Name
                        </h3>
                        <label
                          class="bp3-control bp3-checkbox sc-kAzzGY fnwZpE"
                        >
                          <input
                            type="checkbox"
                          />
                          <span
                            class="undefined bp3-control-indicator"
                          >
                            <span
                              class="checkbox-text"
                            >
                              Choice One
                            </span>
                          </span>
                        </label>
                        <label
                          class="bp3-control bp3-checkbox sc-kAzzGY fnwZpE"
                        >
                          <input
                            type="checkbox"
                          />
                          <span
                            class="undefined bp3-control-indicator"
                          >
                            <span
                              class="checkbox-text"
                            >
                              Choice Two
                            </span>
                          </span>
                        </label>
                      </div>
                      <div
                        class="sc-dnqmqq eyBucE"
                      >
                        <label
                          class="bp3-control bp3-checkbox sc-kAzzGY fnwZpE"
                        >
                          <input
                            type="checkbox"
                          />
                          <span
                            class="small bp3-control-indicator"
                          >
                            <span
                              class="checkbox-text"
                            >
                              Blank vote
                            </span>
                          </span>
                        </label>
                        <label
                          class="bp3-control bp3-checkbox sc-kAzzGY fnwZpE"
                        >
                          <input
                            type="checkbox"
                          />
                          <span
                            class="small bp3-control-indicator"
                          >
                            <span
                              class="checkbox-text"
                            >
                              Not on Ballot
                            </span>
                          </span>
                        </label>
                        <div
                          class="sc-chPdSV hVjAOW sc-jTzLTM hDLiwJ"
                        >
                          <textarea
                            class="bp3-input sc-jzJRlG lpfNbV"
                            name="comment-Contest Name"
                            placeholder="Add Note"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="sc-ifAKCX jzSIMx"
                  >
                    <button
                      class="bp3-button bp3-large bp3-intent-success sc-gZMcBi eZVGYn"
                      type="submit"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        Submit Selections
                      </span>
                    </button>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
        <div
          class="sc-kkGfuU pZHjH"
        >
          <h4
            class="bp3-heading"
          >
            Instructions
          </h4>
          <ol
            class="bp3-list"
          >
            <li>
              Confirm that you are looking at the correct ballot for the batch and position. If the ballot was not located, select
               
              <strong>
                Ballot Not Found at the top of the screen.
              </strong>
            </li>
            <li>
              For each contest, select all the candidate/choices which you see marked on the paper ballot. Select 
              <strong>
                Blank Vote
              </strong>
               
              if the voter did not make any selections. Select
               
              <strong>
                Not on Ballot
              </strong>
               if the contest does not appear on the ballot.
            </li>
            <li>
              Once all votes are recorded, 
              <strong>
                Submit Selections
              </strong>
               
              and proceed to the next ballot until all ballots have been audited.
            </li>
          </ol>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Ballot selects Blank vote 1`] = `
<div>
  <div
    class="sc-chPdSV sc-kpOJdX fqbIQz"
  >
    <div
      class="sc-kGXeez jkxADl"
    >
      <h1
        class="bp3-heading sc-kgoBCf ccmSSD"
      >
        audit board #1
        : Ballot Card Data Entry
      </h1>
      <h3
        class="bp3-heading"
      >
        Enter Ballot Information
      </h3>
      <div
        class="bp3-callout sc-dxgOiQ imJcEu"
      >
        Auditing ballot 
        2
         of 
        27
      </div>
      <div
        class="sc-bwzfXH kYAzKM"
      >
        <div
          class="ballot-side"
        >
          <h4
            class="bp3-heading"
          >
            Current ballot:
          </h4>
          <div>
            Tabulator: 
            11
          </div>
          <div>
            Batch: 
            0003-04-Precinct 19 (Jonesboro Fire Department)
          </div>
          <div>
            Record/Position: 
            2112
          </div>
        </div>
        <div
          class="bp3-divider sc-bdVaJa gqVLlZ"
        />
        <div
          class="ballot-main"
        >
          <h4
            class="bp3-heading"
          >
            Are you looking at the correct ballot?
          </h4>
          <p>
            Before continuing, check the "Current ballot"  information to make sure you are entering data for the correct ballot. If the ballot could not be found, click "Ballot not found" below and move on to the next ballot.
          </p>
          <p>
            <button
              class="bp3-button bp3-intent-danger"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Ballot 
                2112
                 not found - move to next ballot
              </span>
            </button>
          </p>
          <p>
            <a
              class="bp3-button bp3-intent-primary"
              href="/election/1/audit-board/1"
            >
              Return to audit overview
            </a>
          </p>
        </div>
      </div>
      <div
        class="sc-bwzfXH kYAzKM"
      >
        <div
          class="ballot-side"
        />
        <div
          class="ballot-main"
        >
          <div
            class="sc-htpNat jWiLEy"
          >
            <h3
              class="bp3-heading"
            >
              Contest Name
            </h3>
            <div
              class="bp3-divider sc-bdVaJa gqVLlZ"
            />
            <div
              class="sc-jzJRlG hxkCDK"
            >
              <button
                class="bp3-button bp3-disabled bp3-large bp3-intent-primary sc-cSHVUG iYMJEW sc-htoDjs dESvso"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  Blank vote
                </span>
              </button>
              <button
                class="bp3-button bp3-minimal"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-edit"
                  icon="edit"
                >
                  <svg
                    data-icon="edit"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      edit
                    </desc>
                    <path
                      d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="bp3-button-text"
                >
                  Edit
                </span>
              </button>
            </div>
            <p />
          </div>
          <div
            class="sc-ifAKCX jzSIMx"
          >
            <button
              class="bp3-button bp3-intent-success sc-htoDjs dESvso"
              type="submit"
            >
              <span
                class="bp3-button-text"
              >
                Submit & Next Ballot
              </span>
            </button>
            <button
              class="bp3-button bp3-minimal"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Back
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Ballot selects Not on Ballot 1`] = `
<div>
  <div
    class="sc-chPdSV sc-kpOJdX fqbIQz"
  >
    <div
      class="sc-kGXeez jkxADl"
    >
      <h1
        class="bp3-heading sc-kgoBCf ccmSSD"
      >
        audit board #1
        : Ballot Card Data Entry
      </h1>
      <h3
        class="bp3-heading"
      >
        Enter Ballot Information
      </h3>
      <div
        class="bp3-callout sc-dxgOiQ imJcEu"
      >
        Auditing ballot 
        2
         of 
        27
      </div>
      <div
        class="sc-bwzfXH kYAzKM"
      >
        <div
          class="ballot-side"
        >
          <h4
            class="bp3-heading"
          >
            Current ballot:
          </h4>
          <div>
            Tabulator: 
            11
          </div>
          <div>
            Batch: 
            0003-04-Precinct 19 (Jonesboro Fire Department)
          </div>
          <div>
            Record/Position: 
            2112
          </div>
        </div>
        <div
          class="bp3-divider sc-bdVaJa gqVLlZ"
        />
        <div
          class="ballot-main"
        >
          <h4
            class="bp3-heading"
          >
            Are you looking at the correct ballot?
          </h4>
          <p>
            Before continuing, check the "Current ballot"  information to make sure you are entering data for the correct ballot. If the ballot could not be found, click "Ballot not found" below and move on to the next ballot.
          </p>
          <p>
            <button
              class="bp3-button bp3-intent-danger"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Ballot 
                2112
                 not found - move to next ballot
              </span>
            </button>
          </p>
          <p>
            <a
              class="bp3-button bp3-intent-primary"
              href="/election/1/audit-board/1"
            >
              Return to audit overview
            </a>
          </p>
        </div>
      </div>
      <div
        class="sc-bwzfXH kYAzKM"
      >
        <div
          class="ballot-side"
        />
        <div
          class="ballot-main"
        >
          <div
            class="sc-htpNat jWiLEy"
          >
            <h3
              class="bp3-heading"
            >
              Contest Name
            </h3>
            <div
              class="bp3-divider sc-bdVaJa gqVLlZ"
            />
            <div
              class="sc-jzJRlG hxkCDK"
            >
              <button
                class="bp3-button bp3-disabled bp3-large bp3-intent-primary sc-cSHVUG iYMJEW sc-htoDjs dESvso"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  Not on Ballot
                </span>
              </button>
              <button
                class="bp3-button bp3-minimal"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-edit"
                  icon="edit"
                >
                  <svg
                    data-icon="edit"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      edit
                    </desc>
                    <path
                      d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="bp3-button-text"
                >
                  Edit
                </span>
              </button>
            </div>
            <p />
          </div>
          <div
            class="sc-ifAKCX jzSIMx"
          >
            <button
              class="bp3-button bp3-intent-success sc-htoDjs dESvso"
              type="submit"
            >
              <span
                class="bp3-button-text"
              >
                Submit & Next Ballot
              </span>
            </button>
            <button
              class="bp3-button bp3-minimal"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Back
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Ballot switches audit and review views 1`] = `
<div>
  <div
    class="sc-chPdSV sc-kpOJdX fqbIQz"
  >
    <div
      class="sc-kGXeez jkxADl"
    >
      <h1
        class="bp3-heading sc-kgoBCf ccmSSD"
      >
        audit board #1
        : Ballot Card Data Entry
      </h1>
      <h3
        class="bp3-heading"
      >
        Enter Ballot Information
      </h3>
      <div
        class="bp3-callout sc-dxgOiQ imJcEu"
      >
        Auditing ballot 
        2
         of 
        27
      </div>
      <div
        class="sc-bwzfXH kYAzKM"
      >
        <div
          class="ballot-side"
        >
          <h4
            class="bp3-heading"
          >
            Current ballot:
          </h4>
          <div>
            Tabulator: 
            11
          </div>
          <div>
            Batch: 
            0003-04-Precinct 19 (Jonesboro Fire Department)
          </div>
          <div>
            Record/Position: 
            2112
          </div>
        </div>
        <div
          class="bp3-divider sc-bdVaJa gqVLlZ"
        />
        <div
          class="ballot-main"
        >
          <h4
            class="bp3-heading"
          >
            Are you looking at the correct ballot?
          </h4>
          <p>
            Before continuing, check the "Current ballot"  information to make sure you are entering data for the correct ballot. If the ballot could not be found, click "Ballot not found" below and move on to the next ballot.
          </p>
          <p>
            <button
              class="bp3-button bp3-intent-danger"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Ballot 
                2112
                 not found - move to next ballot
              </span>
            </button>
          </p>
          <p>
            <a
              class="bp3-button bp3-intent-primary"
              href="/election/1/audit-board/1"
            >
              Return to audit overview
            </a>
          </p>
        </div>
      </div>
      <div
        class="sc-bwzfXH kYAzKM"
      >
        <div
          class="ballot-side"
        />
        <div
          class="ballot-main"
        >
          <div
            class="sc-htpNat jWiLEy"
          >
            <h3
              class="bp3-heading"
            >
              Contest Name
            </h3>
            <div
              class="bp3-divider sc-bdVaJa gqVLlZ"
            />
            <div
              class="sc-jzJRlG hxkCDK"
            >
              <button
                class="bp3-button bp3-disabled bp3-large bp3-intent-primary sc-cSHVUG iYMJEW sc-htoDjs dESvso"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  Choice One
                </span>
              </button>
              <button
                class="bp3-button bp3-minimal"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-edit"
                  icon="edit"
                >
                  <svg
                    data-icon="edit"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      edit
                    </desc>
                    <path
                      d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="bp3-button-text"
                >
                  Edit
                </span>
              </button>
            </div>
            <p />
          </div>
          <div
            class="sc-ifAKCX jzSIMx"
          >
            <button
              class="bp3-button bp3-intent-success sc-htoDjs dESvso"
              type="submit"
            >
              <span
                class="bp3-button-text"
              >
                Submit & Next Ballot
              </span>
            </button>
            <button
              class="bp3-button bp3-minimal"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Back
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Ballot toggles and submits comment 1`] = `
<div>
  <div
    class="sc-chPdSV sc-kpOJdX fqbIQz"
  >
    <div
      class="sc-kGXeez jkxADl"
    >
      <h1
        class="bp3-heading sc-kgoBCf ccmSSD"
      >
        audit board #1
        : Ballot Card Data Entry
      </h1>
      <h3
        class="bp3-heading"
      >
        Enter Ballot Information
      </h3>
      <div
        class="bp3-callout sc-dxgOiQ imJcEu"
      >
        Auditing ballot 
        2
         of 
        27
      </div>
      <div
        class="sc-bwzfXH kYAzKM"
      >
        <div
          class="ballot-side"
        >
          <h4
            class="bp3-heading"
          >
            Current ballot:
          </h4>
          <div>
            Tabulator: 
            11
          </div>
          <div>
            Batch: 
            0003-04-Precinct 19 (Jonesboro Fire Department)
          </div>
          <div>
            Record/Position: 
            2112
          </div>
        </div>
        <div
          class="bp3-divider sc-bdVaJa gqVLlZ"
        />
        <div
          class="ballot-main"
        >
          <h4
            class="bp3-heading"
          >
            Are you looking at the correct ballot?
          </h4>
          <p>
            Before continuing, check the "Current ballot"  information to make sure you are entering data for the correct ballot. If the ballot could not be found, click "Ballot not found" below and move on to the next ballot.
          </p>
          <p>
            <button
              class="bp3-button bp3-intent-danger"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Ballot 
                2112
                 not found - move to next ballot
              </span>
            </button>
          </p>
          <p>
            <a
              class="bp3-button bp3-intent-primary"
              href="/election/1/audit-board/1"
            >
              Return to audit overview
            </a>
          </p>
        </div>
      </div>
      <div
        class="sc-bwzfXH kYAzKM"
      >
        <div
          class="ballot-side"
        />
        <div
          class="ballot-main"
        >
          <div
            class="sc-htpNat jWiLEy"
          >
            <h3
              class="bp3-heading"
            >
              Contest Name
            </h3>
            <div
              class="bp3-divider sc-bdVaJa gqVLlZ"
            />
            <div
              class="sc-jzJRlG hxkCDK"
            >
              <button
                class="bp3-button bp3-disabled bp3-large bp3-intent-primary sc-cSHVUG iYMJEW sc-htoDjs dESvso"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  Choice One
                </span>
              </button>
              <button
                class="bp3-button bp3-minimal"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-edit"
                  icon="edit"
                >
                  <svg
                    data-icon="edit"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      edit
                    </desc>
                    <path
                      d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="bp3-button-text"
                >
                  Edit
                </span>
              </button>
            </div>
            <p>
              COMMENT: a test comment
            </p>
          </div>
          <div
            class="sc-ifAKCX jzSIMx"
          >
            <button
              class="bp3-button bp3-intent-success sc-htoDjs dESvso"
              type="submit"
            >
              <span
                class="bp3-button-text"
              >
                Submit & Next Ballot
              </span>
            </button>
            <button
              class="bp3-button bp3-minimal"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Back
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
